JM_lab2_v5_k8s/test-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-crudapp-service
spec:
  selector:
    app: test-crud
  type: NodePort  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
