JM_lab2_v5_k8s/l2-test-crud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l2-test-crud-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/Movie        # шлях по якому відбувається перенаправлення на сервіс
            pathType: Prefix           # все, що починається з `/api` буде направлено на сервіс demo-service. Альтернативно можна використовувати `Exact` та `ImplementationSpecific`
            backend:
              service:
                name: test-crudapp-service # ім'я сервісу
                port:
                  number: 8080           # порт на якому запущено сервіс
